crates/escalier_old_parser/src/snapshots/escalier_old_parser__tests__destructuring-15.snap
---
source: crates/escalier_old_parser/src/lib.rs
expression: "parse(\"let [a, mut b = 98, ...rest] = letters;\")"
---
Ok(
    Program {
        body: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 39,
                    },
                },
                span: 0..39,
                kind: VarDecl(
                    VarDecl {
                        pattern: Pattern {
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 4,
                                },
                                end: Position {
                                    line: 0,
                                    column: 28,
                                },
                            },
                            span: 4..28,
                            kind: Array(
                                ArrayPat {
                                    elems: [
                                        Some(
                                            ArrayPatElem {
                                                pattern: Pattern {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 5,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 6,
                                                        },
                                                    },
                                                    span: 5..6,
                                                    kind: Ident(
                                                        BindingIdent {
                                                            name: "a",
                                                            mutable: false,
                                                            span: 5..6,
                                                            loc: SourceLocation {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 5,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 6,
                                                                },
                                                            },
                                                        },
                                                    ),
                                                    inferred_type: None,
                                                },
                                                init: None,
                                            },
                                        ),
                                        Some(
                                            ArrayPatElem {
                                                pattern: Pattern {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 8,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 13,
                                                        },
                                                    },
                                                    span: 8..13,
                                                    kind: Ident(
                                                        BindingIdent {
                                                            name: "b",
                                                            mutable: true,
                                                            span: 8..13,
                                                            loc: SourceLocation {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 8,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 13,
                                                                },
                                                            },
                                                        },
                                                    ),
                                                    inferred_type: None,
                                                },
                                                init: Some(
                                                    Expr {
                                                        loc: SourceLocation {
                                                            start: Position {
                                                                line: 0,
                                                                column: 16,
                                                            },
                                                            end: Position {
                                                                line: 0,
                                                                column: 18,
                                                            },
                                                        },
                                                        span: 16..18,
                                                        kind: Lit(
                                                            Num(
                                                                Num {
                                                                    loc: SourceLocation {
                                                                        start: Position {
                                                                            line: 0,
                                                                            column: 16,
                                                                        },
                                                                        end: Position {
                                                                            line: 0,
                                                                            column: 18,
                                                                        },
                                                                    },
                                                                    span: 16..18,
                                                                    value: "98",
                                                                },
                                                            ),
                                                        ),
                                                        inferred_type: None,
                                                    },
                                                ),
                                            },
                                        ),
                                        Some(
                                            ArrayPatElem {
                                                pattern: Pattern {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 20,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 27,
                                                        },
                                                    },
                                                    span: 20..27,
                                                    kind: Rest(
                                                        RestPat {
                                                            arg: Pattern {
                                                                loc: SourceLocation {
                                                                    start: Position {
                                                                        line: 0,
                                                                        column: 23,
                                                                    },
                                                                    end: Position {
                                                                        line: 0,
                                                                        column: 27,
                                                                    },
                                                                },
                                                                span: 23..27,
                                                                kind: Ident(
                                                                    BindingIdent {
                                                                        name: "rest",
                                                                        mutable: false,
                                                                        span: 23..27,
                                                                        loc: SourceLocation {
                                                                            start: Position {
                                                                                line: 0,
                                                                                column: 23,
                                                                            },
                                                                            end: Position {
                                                                                line: 0,
                                                                                column: 27,
                                                                            },
                                                                        },
                                                                    },
                                                                ),
                                                                inferred_type: None,
                                                            },
                                                        },
                                                    ),
                                                    inferred_type: None,
                                                },
                                                init: None,
                                            },
                                        ),
                                    ],
                                    optional: false,
                                },
                            ),
                            inferred_type: None,
                        },
                        type_ann: None,
                        init: Some(
                            Expr {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 31,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 38,
                                    },
                                },
                                span: 31..38,
                                kind: Ident(
                                    Ident {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 31,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 38,
                                            },
                                        },
                                        span: 31..38,
                                        name: "letters",
                                    },
                                ),
                                inferred_type: None,
                            },
                        ),
                        declare: false,
                    },
                ),
            },
        ],
    },
)
